--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -7,8 +7,8 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'G-T5N5JY1E21', 'caihanlin.com');
-  ga('send', 'pageview');
+  // ga('create', 'G-T5N5JY1E21', '');
+  // ga('send', 'pageview');
 
 </script>
 
