--- a/_includes/head.html
+++ b/_includes/head.html
@@ -57,14 +57,14 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" integrity="sha512-3n19xznO0ubPpSwYCRRBgHh63DrV+bdZfHK52b1esvId4GsfwStQNPJFjeQos2h3JwCmZl0/LgLxSKMAI55hgw==" crossorigin="anonymous"></script>
 
 <!-- 16x16 -->
-<link rel="shortcut icon" href="{{ site.url }}/images/fav.ico">
+<link rel="shortcut icon" href="{{ site.url }}/images/wb0.ico">
 <!-- 32x32 -->
-<link rel="shortcut icon" href="{{ site.url }}/images/fav.png">
+<link rel="shortcut icon" href="{{ site.url }}/images/wb0.png">
 <!-- 57x57 (precomposed) for iPhone 3GS, pre-2011 iPod Touch and older Android devices -->
 <link rel="apple-touch-icon-precomposed" href="{{ site.url }}/images/apple-touch-icon-precomposed.png">
 <!-- 72x72 (precomposed) for 1st generation iPad, iPad 2 and iPad mini -->
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site.url }}/images/fav.png">
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site.url }}/images/wb0.png">
 <!-- 114x114 (precomposed) for iPhone 4, 4S, 5 and post-2011 iPod Touch -->
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.url }}/images/fav.png">
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.url }}/images/wb0.png">
 <!-- 144x144 (precomposed) for iPad 3rd and 4th generation -->
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.url }}/images/fav.png">
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.url }}/images/wb0.png">
